--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     Hello worlr
     <p>testing 101</p>
 
-    <h1>dont like h1 but whatever</h1>
+    <h1>dont like h1 but believe</h1>
   </body>
 </html>
