--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
 <div class="alert alert-light" role="alert">
   A simple light alert—check it out!
 </div>
-<div class="alert alert-dark" role="alert">
-  A simple dark alert—check it out!
-</div>
+<p>wlcm to nation </p>
   </body>
 </html>
