--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
   <body>
     Hello worlr
     <p>testing 101</p>
+    
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#Mynavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        
+                    </button>
+                    <a href="#" class="navbar-brand">LifeStyle Store</a>
+                </div>
+                <div class="collapse navbar-collapse" id="Mynavbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><span class="glyphicon glyphicon-home"></span>Home</a></li>
+                    <li><a href="#About Us"><span class="glyphicon glyphicon-text-background"></span>bout Us</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-user"></span>Sign UP</a></li>
+                    <li><a href="index24.html"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-phone-alt"></span>Contact</a></li>
+                </ul>
+                </div>
+            </div>
+        </nav>
 
     <h1>dont like h1 but believe</h1>
     <h1>testing again</h1>
