--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <html>
+   <head>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+
+
+        <!--jQuery library--> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+
+        <!--Latest compiled and minified JavaScript--> 
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
   <body>
-    Hello worlr
-    <p>testing 101</p>
     
     <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
