--- a/About.html
+++ b/About.html
@@ -4,5 +4,15 @@
     
 </head>
 <body>
-/body>
+
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <strong>Congratulations</strong> You are going to know the most excited person in this world
+
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+
+</body>
 </html>
